Fix bug with link text color
When user load the app for the first time the login text is invisible. Add color property to anchor tag.

--- a/src/views/navigation.module.css
+++ b/src/views/navigation.module.css
@@ -45,6 +45,10 @@
 	opacity: 0.7;
 }
 
+a {
+	color: var(--background-color);
+}
+
 .login-button:visited {
 	color: var(--background-color);
 }
